--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -7,9 +7,15 @@
 }
 
 .header {
+  font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
   border-bottom: var(--color-grey-light-1);
+
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content {
